--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="tr" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>KΔIRA | Birleşik Platform</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -257,7 +257,7 @@
     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path></svg>
   </button>
   <div class="flex items-center justify-center min-h-screen text-white p-4">
-    <div class="w-full max-w-2xl mx-auto glass-container rounded-2xl shadow-2xl flex flex-col p-6 relative" style="height: 90vh;">
+    <div class="w-full max-w-2xl mx-auto glass-container rounded-2xl shadow-2xl flex flex-col p-6 relative h-screen-safe pb-safe">
       <!-- Asistan Yetki Kilidi (Şifre) -->
       <div id="asistan-auth-overlay" class="absolute inset-0 z-40 flex items-center justify-center bg-black/80" style="display:none;">
         <div class="w-full max-w-sm bg-gray-900 border border-gray-700 rounded-2xl p-6 text-center shadow-xl">
