--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
     <!-- DIGITAL AFTERLIFE GÖRÜNÜMÜ -->
     <div id="afterlife-view" class="view">
-        <div class="howto-hint" tabindex="0">
+        <div class="howto-hint">
           <button class="howto-label" type="button" aria-expanded="false" aria-controls="howto-afterlife-pop">Nasıl kullanılır?</button>
           <div class="howto-popover" id="howto-afterlife-pop" role="dialog" aria-labelledby="howto-afterlife-title">
             <h4 id="howto-afterlife-title">Digital Afterlife • Kısa Rehber</h4>
@@ -238,7 +238,7 @@
     
 <!-- KΔIRA SESLİ ASİSTAN GÖRÜNÜMÜ (YENİ) -->
   <div id="asistan-view" class="view">
-    <div class="howto-hint" tabindex="0">
+    <div class="howto-hint">
       <button class="howto-label" type="button" aria-expanded="false" aria-controls="howto-asistan-pop">Nasıl kullanılır?</button>
       <div class="howto-popover" id="howto-asistan-pop" role="dialog" aria-labelledby="howto-asistan-title">
         <h4 id="howto-asistan-title">KΔIRA Sesli Asistan • Kısa Rehber</h4>
@@ -320,7 +320,7 @@
 </div>
     <!-- FOTOĞRAF EDİTÖRÜ GÖRÜNÜMÜ -->
     <div id="editor-view" class="view">
-        <div class="howto-hint" tabindex="0">
+        <div class="howto-hint">
           <button class="howto-label" type="button" aria-expanded="false" aria-controls="howto-editor-pop">Nasıl kullanılır?</button>
           <div class="howto-popover" id="howto-editor-pop" role="dialog" aria-labelledby="howto-editor-title">
             <h4 id="howto-editor-title">Fotoğraf Editörü • Kısa Rehber</h4>
@@ -342,7 +342,7 @@
     
     <!-- EVRENSEL SOHBET GÖRÜNÜMÜ -->
     <div id="chat-view" class="view bg-gray-900">
-        <div class="howto-hint" tabindex="0">
+        <div class="howto-hint">
           <button class="howto-label" type="button" aria-expanded="false" aria-controls="howto-chat-pop">Nasıl kullanılır?</button>
           <div class="howto-popover" id="howto-chat-pop" role="dialog" aria-labelledby="howto-chat-title">
             <h4 id="howto-chat-title">Evrensel Sohbet • Kısa Rehber</h4>
@@ -427,7 +427,7 @@
 
     <!-- KΔIRA CODE LAB GÖRÜNÜMÜ -->
     <div id="code-view" class="view bg-gray-900">
-        <div class="howto-hint" tabindex="0">
+        <div class="howto-hint">
           <button class="howto-label" type="button" aria-expanded="false" aria-controls="howto-code-pop">Nasıl kullanılır?</button>
           <div class="howto-popover" id="howto-code-pop" role="dialog" aria-labelledby="howto-code-title">
             <h4 id="howto-code-title">Code Lab • Kısa Rehber</h4>
@@ -502,7 +502,7 @@
 
     <!-- NASA GÖZLEM PLATFORMU (ADIM 1) -->
     <div id="nasa-view" class="view">
-        <div class="howto-hint" tabindex="0">
+        <div class="howto-hint">
           <button class="howto-label" type="button" aria-expanded="false" aria-controls="howto-nasa-pop">Nasıl kullanılır?</button>
           <div class="howto-popover" id="howto-nasa-pop" role="dialog" aria-labelledby="howto-nasa-title">
             <h4 id="howto-nasa-title">Gözlem Platformu • Kısa Rehber</h4>
