--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <div class="flex items-center justify-between mb-6">
       <h1 class="text-2xl font-semibold">İletişim</h1>
       <div class="flex gap-3">
-        <a href="index.html" class="bg-slate-800 hover:bg-slate-700 text-slate-200 border border-slate-600 px-4 py-2 rounded-lg shadow">Anasayfa</a>
+        <a href="index.html?skipIntro=1" class="bg-slate-800 hover:bg-slate-700 text-slate-200 border border-slate-600 px-4 py-2 rounded-lg shadow">Anasayfa</a>
         <a href="profile.html" class="bg-slate-800 hover:bg-slate-700 text-slate-200 border border-slate-600 px-4 py-2 rounded-lg shadow">Profil</a>
       </div>
     </div>
