--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
     <div class="flex items-center justify-between mb-6">
       <div class="text-2xl font-semibold">Profilim</div>
       <div class="flex gap-3">
-        <a href="index.html" class="bg-slate-800 hover:bg-slate-700 text-slate-200 border border-slate-600 px-4 py-2 rounded-lg shadow">Anasayfa</a>
+        <a href="index.html?skipIntro=1" class="bg-slate-800 hover:bg-slate-700 text-slate-200 border border-slate-600 px-4 py-2 rounded-lg shadow">Anasayfa</a>
         <a href="contact.html" class="bg-slate-800 hover:bg-slate-700 text-slate-200 border border-slate-600 px-4 py-2 rounded-lg shadow">İletişim</a>
         <button id="logout" class="bg-rose-600 hover:bg-rose-700 text-white px-4 py-2 rounded-lg">Çıkış</button>
       </div>
