--- a/index.html
+++ b/index.html
@@ -135,6 +135,14 @@
 
     <!-- SEÇİM EKRANI -->
     <div id="selection-view" class="view active">
+        <!-- Hugging Face link (top-left) -->
+        <a href="https://huggingface.co/umutkkgz" target="_blank" rel="noopener noreferrer" title="Hugging Face — umutkkgz"
+           class="fixed top-6 left-6 z-[10060]">
+          <span class="sr-only">Hugging Face — umutkkgz</span>
+          <div class="w-9 h-9 rounded-full bg-yellow-400/20 hover:bg-yellow-400/30 border border-yellow-300/40 text-yellow-300 flex items-center justify-center shadow-md backdrop-blur-sm">
+            <span style="font-size:18px; line-height:1">🤗</span>
+          </div>
+        </a>
         <div class="min-h-screen flex flex-col items-center justify-center text-center p-4">
             <h1 class="text-5xl md:text-7xl font-serif font-light text-slate-200 mb-4">KΔIRA'ya Hoş Geldin</h1>
             <p class="text-lg md:text-xl text-slate-400 mb-12 max-w-2xl">Lütfen deneyimlemek istediğin projeyi seç.</p>
