--- a/index.html
+++ b/index.html
@@ -156,8 +156,10 @@
         <a href="https://huggingface.co/umutkkgz" target="_blank" rel="noopener noreferrer" title="Hugging Face — umutkkgz"
            class="fixed top-6 left-6 z-[10060]">
           <span class="sr-only">Hugging Face — umutkkgz</span>
-          <div class="w-9 h-9 rounded-full bg-yellow-400/20 hover:bg-yellow-400/30 border border-yellow-300/40 text-yellow-300 flex items-center justify-center shadow-md backdrop-blur-sm">
-            <span style="font-size:18px; line-height:1">🤗</span>
+          <div class="w-9 h-9 rounded-full bg-yellow-400/20 hover:bg-yellow-400/30 border border-yellow-300/40 text-yellow-300 flex items-center justify-center shadow-md backdrop-blur-sm overflow-hidden">
+            <img src="/images/huggingface_logo-noborder.svg" alt="Hugging Face"
+                 class="w-6 h-6" decoding="async" referrerpolicy="no-referrer"
+                 onerror="try{this.parentNode.innerHTML='🤗'}catch(_){}" />
           </div>
         </a>
         <div class="min-h-screen flex flex-col items-center justify-center text-center p-4">
