--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
             <h1 class="text-5xl md:text-7xl font-serif font-light text-slate-200 mb-4">KΔIRA'ya Hoş Geldin</h1>
             <p class="text-lg md:text-xl text-slate-400 mb-12 max-w-2xl">Lütfen deneyimlemek istediğin projeyi seç.</p>
             <div class="grid md:grid-cols-2 gap-8 w-full max-w-5xl">
-                <div class="absolute top-6 right-6">
+                <div class="absolute top-6 right-6 flex gap-2">
+                  <a href="/model" class="bg-slate-800/70 hover:bg-slate-700 text-slate-200 border border-slate-600 px-4 py-2 rounded-lg shadow">Model</a>
                   <a id="auth-open" href="profile.html" class="bg-slate-800/70 hover:bg-slate-700 text-slate-200 border border-slate-600 px-4 py-2 rounded-lg shadow">Üyelik</a>
                 </div>
                 <div id="select-afterlife" class="choice-card glass-container rounded-2xl p-8 cursor-pointer">
