--- a/contact.html
+++ b/contact.html
@@ -83,5 +83,6 @@
       }catch(e){ out.textContent='Hata: ' + (e && e.message || e); out.className='text-sm text-rose-400'; }
     });
   </script>
+  <script src="/js/status-badge.js"></script>
 </body>
 </html>
