--- a/index.html
+++ b/index.html
@@ -1785,5 +1785,6 @@
   <script src="js/starfield.js"></script>
   <!-- How-to hover/toggle helpers -->
   <script src="js/howto.js"></script>
+  <script src="js/status-badge.js"></script>
 </body>
 </html>
