--- a/model/index.html
+++ b/model/index.html
@@ -44,7 +44,7 @@
       <div class="max-w-7xl mx-auto px-4">
         <div class="grid md:grid-cols-2 gap-8 items-center">
           <div>
-            <h1 class="text-4xl md:text-6xl font-serif font-light text-white mb-4">KΔIRA Model Ailesi</h1>
+            <h1 class="text-4xl md:text-6xl font-serif font-light text-white mb-4">KΔIRA Ailesi</h1>
             <p class="text-lg text-slate-300">Hız, kalite ve güvenlik arasında en iyi dengeyi sunan çok‑modlu (metin, ses, görsel) akıllı model ailesi. Türkiye odaklı veri anlayışı ve Türkçe için doğal akış.</p>
             <div class="mt-6 flex gap-3">
               <a href="/index.html?skipIntro=1&start=chat" class="bg-indigo-600 hover:bg-indigo-700 text-white font-semibold px-5 py-2.5 rounded-lg">Hemen Dene</a>
@@ -172,9 +172,9 @@
   <!-- Arka plan yıldız alanı (opsiyonel) -->
   <canvas id="starfield-canvas" aria-hidden="true"></canvas>
   <script src="/js/starfield.js"></script>
+  <script src="/js/status-badge.js"></script>
   <script>
     // Basit: /index.html?start=chat ile sohbete deep-link
   </script>
 </body>
 </html>
-
