--- a/profile.html
+++ b/profile.html
@@ -236,5 +236,6 @@
       alert('Yerel KΔIRA verileri silindi. (Oturum kapatılmış olabilir)');
     });
   </script>
+  <script src="/js/status-badge.js"></script>
 </body>
 </html>
