--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
             <div class="grid md:grid-cols-2 gap-8 w-full max-w-5xl">
                 <div class="absolute top-6 right-6 flex gap-2">
                   <a href="/model" class="bg-slate-800/70 hover:bg-slate-700 text-slate-200 border border-slate-600 px-4 py-2 rounded-lg shadow">Model</a>
+                  <a href="/fiyatlandırma" class="bg-slate-800/70 hover:bg-slate-700 text-slate-200 border border-slate-600 px-4 py-2 rounded-lg shadow">Fiyatlandırma</a>
                   <a id="auth-open" href="profile.html" class="bg-slate-800/70 hover:bg-slate-700 text-slate-200 border border-slate-600 px-4 py-2 rounded-lg shadow">Üyelik</a>
                 </div>
                 <div id="select-afterlife" class="choice-card glass-container rounded-2xl p-8 cursor-pointer">
